<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phone Dialer</string>
    
    <string name="none"></string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="star">*</string>
    <string name="diez">#</string>
    
    <string name="action_settings">Settings</string>

</resources>
