<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.pdsd.lab03.phonedialer.PhoneDialerActivity" >

    <EditText
        android:id="@+id/edit_text_phone_number"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" 
        android:text="@string/none"
        android:enabled="false" />
    
	<Space 
	    android:layout_width="fill_parent"
	    android:layout_height="10dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:gravity="center"
        android:rowCount="6" >
        
        <ImageButton
            android:id="@+id/backspace"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/backspace" 
            android:layout_gravity="center"
            android:contentDescription="@string/none" />
       
        <Button
            android:id="@+id/digit_1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/digit_1" />

        <Button
            android:id="@+id/digit_2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/digit_2" />

        <Button
            android:id="@+id/digit_3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/digit_3" />

        <Button
            android:id="@+id/digit_4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/digit_4" />

        <Button
            android:id="@+id/digit_5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/digit_5" />

        <Button
            android:id="@+id/digit_6"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_row="2"
            android:contentDescription="@string/digit_2"
            android:text="@string/digit_6" />

        <Button
            android:id="@+id/digit_7"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/digit_7" />

        <Button
            android:id="@+id/digit_8"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/digit_8" />

        <Button
            android:id="@+id/digit_9"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/digit_9" />

        <Button
            android:id="@+id/digit_0"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/digit_0" />

        <Button
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/star" />

        <Button
            android:id="@+id/diez"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/diez" />
        
        <ImageButton
            android:id="@+id/hangup"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_column="2"
            android:layout_row="5"
            android:layout_gravity="center"
            android:contentDescription="@string/none"
            android:src="@drawable/hangup" />
        
        <ImageButton 
            android:id="@+id/call"
            android:layout_row="5"
            android:layout_column="0" 
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/call" 
            android:layout_gravity="center"
            android:contentDescription="@string/none" />
    </GridLayout>

</LinearLayout>